# json2csv

./: LICENSE  README.md  data.lnk  json2csv.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample.json
tests/: test_conversion.py
