[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2csv-cli"
version = "1.0.0"
authors = [ { name = "devjohxylon" } ]
description = "Secure JSON to CSV converter CLI"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
